luskan: use the DelegatingStorageManager

--- a/luskan/src/main/resources/PluginFactory.properties
+++ b/luskan/src/main/resources/PluginFactory.properties
@@ -19,10 +19,8 @@ ca.nrc.cadc.tap.db.DatabaseDataType=ca.nrc.cadc.tap.pg.PostgresDataTypeMapper
 
 ca.nrc.cadc.tap.writer.format.FormatFactory = org.opencadc.luskan.tap.FormatFactoryImpl
 
-## currently need to pick this at compile
-## TODO: modify cadc-tap-server to find this config file at runtime
-ca.nrc.cadc.tap.ResultStore = org.opencadc.tap.tmp.TempStorageManager
-#ca.nrc.cadc.tap.ResultStore = org.opencadc.tap.tmp.HttpStorageManager
+# use cadc-tap-tmp
+ca.nrc.cadc.tap.ResultStore = org.opencadc.tap.tmp.DelegatingStorageManager
 
 ca.nrc.cadc.tap.schema.TapSchemaDAO = org.opencadc.luskan.tap.TapSchemaDAOImpl
 
