--- a/raven/build.gradle
+++ b/raven/build.gradle
@@ -33,8 +33,8 @@ dependencies {
     compile 'org.opencadc:cadc-rest:[1.3.14,)'
     compile 'org.opencadc:cadc-cdp:[1.0,)'
     compile 'org.opencadc:cadc-gms:[1.0.4,)'
-    compile 'org.opencadc:cadc-inventory:[0.9.4,2.0)'
-    compile 'org.opencadc:cadc-inventory-db:[0.15.0,)'
+    compile 'org.opencadc:cadc-inventory:[1.0,2.0)'
+    compile 'org.opencadc:cadc-inventory-db:[1.0,2.0)'
     compile 'org.opencadc:cadc-inventory-server:[0.3.0,)'
     compile 'org.opencadc:cadc-permissions:[0.3.5,)'
     compile 'org.opencadc:cadc-permissions-client:[0.3,)'
