--- a/cadc-inventory-server/build.gradle
+++ b/cadc-inventory-server/build.gradle
@@ -18,12 +18,12 @@ description = 'OpenCADC Storage Inventory server utility library'
 def git_url = 'https://github.com/opencadc/storage-inventory'
 
 dependencies {
-    compile 'org.opencadc:cadc-inventory:[0.7,1.0)'
-    compile 'org.opencadc:cadc-inventory-db:[0.15,)'
-    compile 'org.opencadc:cadc-util:[1.9,2.0)'
-    compile 'org.opencadc:cadc-rest:[1.3.14,)'
-    compile 'org.opencadc:cadc-gms:[1.0.4,)'
-    compile 'org.opencadc:cadc-cdp:[1.3,2.0)'
+    compile 'org.opencadc:cadc-inventory:[1.0.0,2.0)'
+    compile 'org.opencadc:cadc-inventory-db:[1.0.0,2.0)'
+    compile 'org.opencadc:cadc-util:[1.11,2.0)'
+    compile 'org.opencadc:cadc-rest:[1.3.14,2.0)'
+    compile 'org.opencadc:cadc-gms:[1.0.12,)'
+    compile 'org.opencadc:cadc-cdp:[1.3,)'
     compile 'org.opencadc:cadc-permissions:[0.2,)'
     compile 'org.opencadc:cadc-permissions-client:[0.3,)'
     compile 'org.opencadc:cadc-vos:[2.0,3.0)'
