--- a/minoc/build.gradle
+++ b/minoc/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     compile 'org.opencadc:cadc-gms:[1.0.0,)'
     compile 'org.opencadc:cadc-inventory:[1.0,2.0)'
     compile 'org.opencadc:cadc-inventory-db:[1.0,2.0)'
-    compile 'org.opencadc:cadc-inventory-server:[0.2.1,)'
+    compile 'org.opencadc:cadc-inventory-server:[0.3.0,1.0)'
     compile 'org.opencadc:cadc-soda-server:[1.2.0,2.0.0)'
     compile 'org.opencadc:cadc-storage-adapter:[0.11.2,)'
     compile 'org.opencadc:cadc-permissions:[0.3.1,)'
