--- a/tantar/build.gradle
+++ b/tantar/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     compile 'org.opencadc:cadc-inventory:[1.0.0,2.0)'
     compile 'org.opencadc:cadc-inventory-db:[1.0.0,2.0)'
     compile 'org.opencadc:cadc-inventory-util:[0.1.8,1.0)'
-    compile 'org.opencadc:cadc-storage-adapter:[0.11.1,1.0)'
+    compile 'org.opencadc:cadc-storage-adapter:[1.0,)'
 
     runtime 'org.opencadc:cadc-storage-adapter-fs:[0.9.3,)'
     runtime 'org.opencadc:cadc-storage-adapter-ad:[0.6.3,)'
