add vault back to the CI build was missing after a merge

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -70,6 +70,9 @@ jobs:
     - name: java build -- ratik
       run: cd ratik && ../gradlew --info clean build javadoc checkstyleMain
 
+    - name: java build -- vault
+      run: cd vault && ../gradlew --info clean build javadoc checkstyleMain
+
     - name: java build -- ringhold
       run: cd ringhold && ../gradlew --info clean build javadoc checkstyleMain
 
