vault: implement pass through params on files endpoint

--- a/vault/src/main/webapp/service.yaml
+++ b/vault/src/main/webapp/service.yaml
@@ -39,6 +39,51 @@ paths:
           description: Service busy
         default:
           description: Unexpected error
+      parameters:
+        - name: SUB
+          in: query
+          description: 'PROTOTYPE: SUB-region of a FITS file image using cfitsio syntax.  Multiple SUB parameters are allowed and will generate MEF output in file order. Examples: entire extensions (SUB=[1]&SUB=[SCI,2]), or more general purpose (SUB=[SCI,3][400:500]).'
+          required: false
+          type: string
+          collectionFormat: multi
+        - name: POS
+          in: query
+          description: The positional regions to be extracted from the data (SODA-1.0).
+          required: false
+          type: string
+        - name: CIRCLE
+          in: query
+          description: The spatial region using the CIRCLE xtype defined in DALI (SODA-1.0).
+          required: false
+          type: string
+        - name: POLYGON
+          in: query
+          description: The spatial region using the POLYGON xtype defined in DALI (SODA-1.0).
+          required: false
+          type: string
+        - name: BAND
+          in: query
+          description: The wavelength interval(s) using the INTERVAL xtype defined in DALI (SODA-1.0).
+          required: false
+          type: string
+        - name: TIME
+          in: query
+          description: The time interval(s) using the INTERVAL xtype defined in DALI (SODA-1.0).
+          required: false
+          type: string
+        - name: POL
+          in: query
+          type: array
+          collectionFormat: multi
+          items:
+            type: string
+          description: The polarization state(s) (Stokes), supports multiple values (SODA-1.0).
+          required: false
+        - name: META
+          in: query
+          description: 'PROTOTYPE: extract METAdata (headers) from a file. A single parameter META=true is supported for FITS files. Output will be a plain text rendition of the headers.'
+          required: false
+          type: boolean
     head:
       description: |
         Get the metadata of the specified file.
