--- a/minoc/build.gradle
+++ b/minoc/build.gradle
@@ -26,23 +26,23 @@ war {
 }
 
 dependencies {
-    implementation 'org.opencadc:cadc-util:[1.10.2,2.0)'
-    implementation 'org.opencadc:cadc-log:[1.1.6,2.0)'
-    implementation 'org.opencadc:cadc-registry:[1.7,)'
-    implementation 'org.opencadc:cadc-vosi:[1.4.3,2.0)'
-    implementation 'org.opencadc:cadc-rest:[1.3.14,)'
-    implementation 'org.opencadc:cadc-cdp:[1.0,)'
-    implementation 'org.opencadc:cadc-data-ops-fits:[0.4.0,)'
-    implementation 'org.opencadc:cadc-gms:[1.0.0,)'
-    implementation 'org.opencadc:cadc-inventory:[1.0,2.0)'
-    implementation 'org.opencadc:cadc-inventory-db:[1.0,2.0)'
-    implementation 'org.opencadc:cadc-soda-server:[1.2.0,2.0.0)'
-    implementation 'org.opencadc:cadc-storage-adapter:[1.0,)'
-    implementation 'org.opencadc:cadc-permissions:[0.3.1,)'
-    implementation 'org.opencadc:cadc-permissions-client:[0.3,)'
-    implementation 'org.opencadc:cadc-gms:[1.0,)'
+    compile 'org.opencadc:cadc-util:[1.10.2,2.0)'
+    compile 'org.opencadc:cadc-log:[1.1.6,2.0)'
+    compile 'org.opencadc:cadc-registry:[1.7,)'
+    compile 'org.opencadc:cadc-vosi:[1.4.3,2.0)'
+    compile 'org.opencadc:cadc-rest:[1.3.14,)'
+    compile 'org.opencadc:cadc-cdp:[1.0,)'
+    compile 'org.opencadc:cadc-data-ops-fits:[0.4.0,)'
+    compile 'org.opencadc:cadc-gms:[1.0.0,)'
+    compile 'org.opencadc:cadc-inventory:[1.0,2.0)'
+    compile 'org.opencadc:cadc-inventory-db:[1.0,2.0)'
+    compile 'org.opencadc:cadc-soda-server:[1.2.0,2.0.0)'
+    compile 'org.opencadc:cadc-storage-adapter:[1.0,)'
+    compile 'org.opencadc:cadc-permissions:[0.3.1,)'
+    compile 'org.opencadc:cadc-permissions-client:[0.3,)'
+    compile 'org.opencadc:cadc-gms:[1.0,)'
     
-    implementation 'gov.nasa.gsfc.heasarc:nom-tam-fits:1.20.0'
+    compile 'gov.nasa.gsfc.heasarc:nom-tam-fits:1.20.0'
 
     testImplementation 'junit:junit:[4.0,)'
     testImplementation 'org.opencadc:cadc-storage-adapter-fs:[0.9.3,)'
@@ -51,7 +51,6 @@ dependencies {
 
     runtimeOnly 'org.opencadc:cadc-access-control-identity:[1.2.1,2.0)'
     runtimeOnly 'org.opencadc:cadc-storage-adapter-fs:[0.9.3,)'
-    runtimeOnly 'org.opencadc:cadc-storage-adapter-ad:[0.7.0,)'
     runtimeOnly 'org.opencadc:cadc-storage-adapter-swift:[0.8.7,)'
 }
 
