--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,11 +10,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - uses: actions/checkout@v3
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
       with:
-        java-version: 1.8
+        distribution: 'temurin'
+        java-version: 11
         
     - name: build and test storage-inventory-dm
       run: cd storage-inventory-dm && ../gradlew --info clean build xslt
