--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,4 +1,4 @@
-name: Java+Docker CI
+name: Java CI
 
 on: 
   pull_request:
@@ -10,11 +10,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v1
     - name: Set up JDK 11
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v1
       with:
-        distribution: 'temurin'
         java-version: 11
         
     - name: build and test storage-inventory-dm
@@ -41,8 +40,8 @@ jobs:
     - name: build and test cadc-storage-adapter-fs
       run: cd cadc-storage-adapter-fs && ../gradlew --info clean build javadoc checkstyleMain install
 
-    - name: build and test cadc-storage-adapter-ad
-      run: cd cadc-storage-adapter-ad && ../gradlew --info clean build javadoc checkstyleMain install
+#    - name: build and test cadc-storage-adapter-ad
+#      run: cd cadc-storage-adapter-ad && ../gradlew --info clean build javadoc checkstyleMain install
 
 #    - name: build and test cadc-storage-adapter-s3
 #      run: cd cadc-storage-adapter-s3 && ../gradlew --info clean build javadoc checkstyleMain install
