vault: add pkg endpoint

--- a/vault/src/main/webapp/WEB-INF/web.xml
+++ b/vault/src/main/webapp/WEB-INF/web.xml
@@ -118,7 +118,21 @@
     </init-param>
     <load-on-startup>3</load-on-startup>
   </servlet>
-  
+
+    <servlet>
+        <servlet-name>PackageServlet</servlet-name>
+        <servlet-class>ca.nrc.cadc.uws.server.JobServlet</servlet-class>
+        <init-param>
+            <param-name>get</param-name>
+            <param-value>ca.nrc.cadc.uws.web.SyncGetAction</param-value>
+        </init-param>
+        <init-param>
+            <param-name>ca.nrc.cadc.uws.server.JobManager</param-name>
+            <param-value>org.opencadc.vault.uws.PackageJobManager</param-value>
+        </init-param>
+        <load-on-startup>3</load-on-startup>
+    </servlet>
+    
     <servlet>
         <servlet-name>PubKeyServlet</servlet-name>
         <servlet-class>ca.nrc.cadc.rest.RestServlet</servlet-class>
@@ -270,6 +284,11 @@
     <servlet-name>FilesServlet</servlet-name>
     <url-pattern>/files/*</url-pattern>
   </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>PackageServlet</servlet-name>
+        <url-pattern>/pkg/*</url-pattern>
+    </servlet-mapping>
 
   <servlet-mapping>
     <servlet-name>RecursiveDeleteNodeServlet</servlet-name>
