revert minoc Dockerfile

--- a/minoc/Dockerfile
+++ b/minoc/Dockerfile
@@ -1,5 +1,4 @@
-#FROM images.opencadc.org/library/cadc-tomcat:1
-FROM cadc-tomcat:latest
+FROM images.opencadc.org/library/cadc-tomcat:1
 
 # wcslib provided by base image now
 
