--- a/raven/build.gradle
+++ b/raven/build.gradle
@@ -1,7 +1,5 @@
 plugins {
     id 'war'
-    id 'maven'
-    id 'maven-publish'
     id 'checkstyle'
 }
 
@@ -26,29 +24,32 @@ war {
 }
 
 dependencies {
-    compile 'org.opencadc:cadc-util:[1.10.3,2.0)'
-    compile 'org.opencadc:cadc-log:[1.1.6,2.0)'
-    compile 'org.opencadc:cadc-registry:[1.7,)'
-    compile 'org.opencadc:cadc-vosi:[1.4.3,2.0)'
-    compile 'org.opencadc:cadc-rest:[1.3.14,)'
-    compile 'org.opencadc:cadc-cdp:[1.0,)'
-    compile 'org.opencadc:cadc-gms:[1.0.4,)'
-    compile 'org.opencadc:cadc-inventory:[1.0,2.0)'
-    compile 'org.opencadc:cadc-inventory-db:[1.0,2.0)'
-    compile 'org.opencadc:cadc-inventory-server:[0.3.0,1.0)'
-    compile 'org.opencadc:cadc-permissions:[0.3.5,)'
-    compile 'org.opencadc:cadc-permissions-client:[0.3,)'
-    compile 'org.opencadc:cadc-vos:[1.2,2.0)'
+    implementation 'org.opencadc:cadc-util:[1.10.3,2.0)'
+    implementation 'org.opencadc:cadc-log:[1.1.6,2.0)'
+    implementation 'org.opencadc:cadc-registry:[1.7,)'
+    implementation 'org.opencadc:cadc-vosi:[1.4.3,2.0)'
+    implementation 'org.opencadc:cadc-rest:[1.3.14,)'
+    implementation 'org.opencadc:cadc-cdp:[1.0,)'
+    implementation 'org.opencadc:cadc-gms:[1.0.4,)'
+    implementation 'org.opencadc:cadc-inventory:[1.0,2.0)'
+    implementation 'org.opencadc:cadc-inventory-db:[1.0,2.0)'
+    implementation 'org.opencadc:cadc-inventory-server:[0.3.0,1.0)'
+    implementation 'org.opencadc:cadc-permissions:[0.3.5,)'
+    implementation 'org.opencadc:cadc-permissions-client:[0.3,)'
+    implementation 'org.opencadc:cadc-vos:[1.2,2.0)'
 
-    runtime 'org.opencadc:cadc-access-control:[1.1.1,2.0)'
-    runtime 'org.opencadc:cadc-access-control-identity:[1.2.0,2.0)'
-    runtime 'org.opencadc:caom2-artifact-resolvers:[1.2.10,2.0)'
+    runtimeOnly 'org.opencadc:cadc-access-control:[1.1.1,2.0)'
+    runtimeOnly 'org.opencadc:cadc-access-control-identity:[1.2.0,2.0)'
+    runtimeOnly 'org.opencadc:caom2-artifact-resolvers:[1.2.10,2.0)'
 
-    testCompile 'junit:junit:[4.0,)'
+    testImplementation 'junit:junit:[4.0,)'
 
-    intTestCompile 'org.opencadc:cadc-test-vosi:[1.0.11,)'
-    intTestRuntime 'org.postgresql:postgresql:[42.2.8,)'
+    intTestImplementation 'org.opencadc:cadc-test-vosi:[1.0.11,)'
+    intTestRuntimeOnly 'org.postgresql:postgresql:[42.2.8,)'
 }
 
+configurations {
+    runtime.exclude group: 'org.postgresql:postgresql'
+}
 
 
