--- a/vault/build.gradle
+++ b/vault/build.gradle
@@ -1,7 +1,5 @@
 plugins {
     id 'war'
-    id 'maven'
-    id 'maven-publish'
     id 'checkstyle'
 }
 
@@ -29,35 +27,32 @@ description = 'OpenCADC vault service'
 def git_url = 'https://github.com/opencadc/storage-inventory'
 
 dependencies {
-    compile 'javax.servlet:javax.servlet-api:[3.1,4.0)'
+    implementation 'org.opencadc:cadc-util:[1.11.0,2.0)'
+    implementation 'org.opencadc:cadc-log:[1.1.6,2.0)'
+    implementation 'org.opencadc:cadc-gms:[1.0.5,)'
+    implementation 'org.opencadc:cadc-rest:[1.3.16,)'
+    implementation 'org.opencadc:cadc-vos:[2.0.7,)'
+    implementation 'org.opencadc:cadc-vos-server:[2.0.18,)'
+    implementation 'org.opencadc:cadc-vosi:[1.3.2,)'
+    implementation 'org.opencadc:cadc-uws:[1.0,)'
+    implementation 'org.opencadc:cadc-uws-server:[1.2.19,)'
+    implementation 'org.opencadc:cadc-access-control:[1.1.1,2.0)'
+    implementation 'org.opencadc:cadc-cdp:[1.2.3,)'
+    implementation 'org.opencadc:cadc-registry:[1.7.6,)'
+    implementation 'org.opencadc:cadc-inventory:[1.0.1,2.0)'
+    implementation 'org.opencadc:cadc-inventory-db:[1.0.4,2.0)'
+    implementation 'org.opencadc:cadc-inventory-server:[0.3.0,1.0)'
+    implementation 'org.opencadc:cadc-permissions:[0.3.5,1.0)'
 
-    compile 'org.opencadc:cadc-util:[1.11.0,2.0)'
-    compile 'org.opencadc:cadc-log:[1.1.6,2.0)'
-    compile 'org.opencadc:cadc-gms:[1.0.5,)'
-    compile 'org.opencadc:cadc-rest:[1.3.16,)'
-    compile 'org.opencadc:cadc-vos:[2.0.7,)'
-    compile 'org.opencadc:cadc-vos-server:[2.0.18,)'
-    compile 'org.opencadc:cadc-vosi:[1.3.2,)'
-    compile 'org.opencadc:cadc-uws:[1.0,)'
-    compile 'org.opencadc:cadc-uws-server:[1.2.19,)'
-    compile 'org.opencadc:cadc-access-control:[1.1.1,2.0)'
-    compile 'org.opencadc:cadc-cdp:[1.2.3,)'
-    compile 'org.opencadc:cadc-registry:[1.7.6,)'
-    compile 'org.opencadc:cadc-inventory:[1.0.1,2.0)'
-    compile 'org.opencadc:cadc-inventory-db:[1.0.4,2.0)'
-    compile 'org.opencadc:cadc-inventory-server:[0.3.0,1.0)'
-    compile 'org.opencadc:cadc-permissions:[0.3.5,1.0)'
+    testImplementation 'junit:junit:[4.0,)'
 
-    testCompile 'junit:junit:[4.0,)'
+    runtimeOnly 'org.opencadc:cadc-access-control-identity:[1.2.1,)'
+    runtimeOnly 'org.opencadc:cadc-gms:[1.0.5,)'
 
-    runtime 'org.opencadc:cadc-access-control-identity:[1.2.1,)'
-    runtime 'org.opencadc:cadc-gms:[1.0.5,)'
-
-    intTestCompile 'org.opencadc:cadc-test-vosi:[1.0.11,)'
-    intTestCompile 'org.opencadc:cadc-test-vos:[2.1.9,)'
+    intTestImplementation 'org.opencadc:cadc-test-vosi:[1.0.11,)'
+    intTestImplementation 'org.opencadc:cadc-test-vos:[2.1.9,)'
 }
 
 configurations {
-    compile.exclude group: 'org.restlet.jee'
     runtime.exclude group: 'org.postgresql:postgresql'
 }
