--- a/minoc/Dockerfile
+++ b/minoc/Dockerfile
@@ -1,6 +1,6 @@
 FROM images.opencadc.org/library/cadc-tomcat:1
 
-# wcslib provided by base image now
+RUN dnf install -y attr && dnf clean all
 
 COPY build/libs/minoc.war /usr/share/tomcat/webapps/
 
