--- a/cadc-inventory-server/build.gradle
+++ b/cadc-inventory-server/build.gradle
@@ -1,6 +1,5 @@
 plugins {
-    id 'java'
-    id 'maven'
+    id 'java-library'
     id 'maven-publish'
     id 'checkstyle'
 }
@@ -9,6 +8,8 @@ repositories {
     mavenCentral()
     mavenLocal()
 }
+
+apply from: '../opencadc.gradle'
 
 sourceCompatibility = 11
 
@@ -20,19 +21,18 @@ description = 'OpenCADC Storage Inventory server utility library'
 def git_url = 'https://github.com/opencadc/storage-inventory'
 
 dependencies {
-    compile 'org.opencadc:cadc-inventory:[1.0.0,2.0)'
-    compile 'org.opencadc:cadc-inventory-db:[1.0.0,2.0)'
-    compile 'org.opencadc:cadc-util:[1.11,2.0)'
-    compile 'org.opencadc:cadc-rest:[1.3.14,2.0)'
-    compile 'org.opencadc:cadc-gms:[1.0.12,)'
-    compile 'org.opencadc:cadc-cdp:[1.3,)'
-    compile 'org.opencadc:cadc-permissions:[0.2,)'
-    compile 'org.opencadc:cadc-permissions-client:[0.3,)'
-    compile 'org.opencadc:cadc-vos:[2.0,3.0)'
-    compile 'org.opencadc:cadc-vosi:[1.4.3,2.0)'
+    implementation 'org.opencadc:cadc-inventory:[1.0.0,2.0)'
+    implementation 'org.opencadc:cadc-inventory-db:[1.0.0,2.0)'
+    implementation 'org.opencadc:cadc-util:[1.11,2.0)'
+    implementation 'org.opencadc:cadc-rest:[1.3.14,2.0)'
+    implementation 'org.opencadc:cadc-gms:[1.0.12,)'
+    implementation 'org.opencadc:cadc-cdp:[1.3,)'
+    implementation 'org.opencadc:cadc-permissions:[0.2,)'
+    implementation 'org.opencadc:cadc-permissions-client:[0.3,)'
+    implementation 'org.opencadc:cadc-vos:[2.0,3.0)'
+    implementation 'org.opencadc:cadc-vosi:[1.4.3,2.0)'
 
-    testCompile 'junit:junit:[4.0,)'
+    testImplementation 'junit:junit:[4.0,)'
 }
 
-apply from: '../opencadc.gradle'
 
