--- a/cadc-inventory/build.gradle
+++ b/cadc-inventory/build.gradle
@@ -1,6 +1,5 @@
 plugins {
-    id 'java'
-    id 'maven'
+    id 'java-library'
     id 'maven-publish'
     id 'checkstyle'
 }
@@ -10,21 +9,21 @@ repositories {
     mavenLocal()
 }
 
+apply from: '../opencadc.gradle'
+
 sourceCompatibility = 11
 
 group = 'org.opencadc'
 
-version = '1.0.2'
+version = '1.0.3'
 
 description = 'OpenCADC Storage Inventory core library'
 def git_url = 'https://github.com/opencadc/storage-inventory'
 
 dependencies {
-    compile 'org.opencadc:cadc-util:[1.11.0,2.0)'
+    api 'org.opencadc:cadc-util:[1.12.0,2.0)'
 
-    testCompile 'junit:junit:[4.0,)'
+    testImplementation 'junit:junit:[4.0,)'
 }
-
-apply from: '../opencadc.gradle'
 
 
