--- a/luskan/build.gradle
+++ b/luskan/build.gradle
@@ -24,39 +24,39 @@ war {
 }
 
 dependencies {
-    providedCompile 'javax.servlet:javax.servlet-api:[3.1.0,)'
-    compile 'org.jdom:jdom2:[2.0,)'
+    implementation 'org.jdom:jdom2:[2.0,)'
 
-    compile 'org.opencadc:cadc-util:[1.11.6,2.0)'
-    compile 'org.opencadc:cadc-rest:[1.3.14,2.0)'
-    compile 'org.opencadc:cadc-log:[1.1.6,2.0)'
-    compile 'org.opencadc:cadc-vosi:[1.4.3,2.0)'
-    compile 'org.opencadc:cadc-adql:[1.1,)'
-    compile 'org.opencadc:cadc-uws:[1.0.3,)'
-    compile 'org.opencadc:cadc-dali:[1.2.19,)'
-    compile 'org.opencadc:cadc-uws-server:[1.2.22,)'
-    compile 'org.opencadc:cadc-tap-schema:[1.2.4,)'
-    compile 'org.opencadc:cadc-tap-server:[1.1.27,)'
-    compile 'org.opencadc:cadc-tap-server-pg:[1.1.2,)'
+    implementation 'org.opencadc:cadc-util:[1.11.6,2.0)'
+    implementation 'org.opencadc:cadc-rest:[1.3.14,2.0)'
+    implementation 'org.opencadc:cadc-log:[1.1.6,2.0)'
+    implementation 'org.opencadc:cadc-cdp:[1.4,2.0)'
+    implementation 'org.opencadc:cadc-vosi:[1.4.3,2.0)'
+    implementation 'org.opencadc:cadc-adql:[1.1,)'
+    implementation 'org.opencadc:cadc-uws:[1.0.3,)'
+    implementation 'org.opencadc:cadc-uws-server:[1.2.18,)'
+    implementation 'org.opencadc:cadc-dali:[1.2.25,)'
+    implementation 'org.opencadc:cadc-tap-server:[1.1.31,)'
+    implementation 'org.opencadc:cadc-tap-schema:[1.2,)'
+    implementation 'org.opencadc:cadc-tap-server-pg:[1.0.5,)'
 
-    runtime 'org.opencadc:cadc-tap-tmp:[1.1,)'
-    runtime 'org.opencadc:cadc-registry:[1.7,)'
-    runtime 'org.opencadc:cadc-access-control-identity:[1.2.0,2.0)'
+    runtimeOnly 'org.opencadc:cadc-tap-tmp:[1.1,)'
+    runtimeOnly 'org.opencadc:cadc-registry:[1.7,)'
+    runtimeOnly 'org.opencadc:cadc-access-control-identity:[1.2.0,2.0)'
 
-    testCompile 'junit:junit:[4.0,)'
+    testImplementation 'junit:junit:[4.0,)'
 
-    intTestCompile 'org.opencadc:cadc-tap:[1.0,)'
-    intTestCompile 'org.opencadc:cadc-test-vosi:[1.0.11,)'
-    intTestCompile 'org.opencadc:cadc-test-uws:[1.1.1,)'
-    intTestCompile 'org.opencadc:cadc-test-tap:[1.1,)'
+    intTestImplementation 'org.opencadc:cadc-tap:[1.0,)'
+    intTestImplementation 'org.opencadc:cadc-test-vosi:[1.0.11,)'
+    intTestImplementation 'org.opencadc:cadc-test-uws:[1.1.1,)'
+    intTestImplementation 'org.opencadc:cadc-test-tap:[1.1,)'
 }
 
 configurations {
   // this are provided by tomcat
-  runtime.exclude group: 'javax.servlet'
-  runtime.exclude group: 'org.postgresql'
+  runtimeOnly.exclude group: 'javax.servlet'
+  runtimeOnly.exclude group: 'org.postgresql'
 
   // pulled by stil,unused, critical CVEs:
-  runtime.exclude group: 'org.yaml', module: 'snakeyaml'
+  runtimeOnly.exclude group: 'org.yaml', module: 'snakeyaml'
 }
 
