--- a/cadc-storage-adapter/build.gradle
+++ b/cadc-storage-adapter/build.gradle
@@ -1,6 +1,5 @@
 plugins {
-    id 'java'
-    id 'maven'
+    id 'java-library'
     id 'maven-publish'
     id 'checkstyle'
 }
@@ -10,21 +9,23 @@ repositories {
     mavenLocal()
 }
 
+apply from: '../opencadc.gradle'
+
 sourceCompatibility = 11
 
 group = 'org.opencadc'
 
-version = '1.0.1'
+version = '1.0.2'
 
 description = 'OpenCADC Storage Inventory StorageAdapter API library'
 def git_url = 'https://github.com/opencadc/storage-inventory'
 
 dependencies {
-    compile 'org.opencadc:cadc-util:[1.11,2.0)'
-    compile 'org.opencadc:cadc-inventory:[0.8,)'
+    implementation 'xerces:xercesImpl:[2.12.2,)'
+    implementation 'org.opencadc:cadc-util:[1.11,2.0)'
+    api 'org.opencadc:cadc-inventory:[0.8,)'
+    api 'org.bouncycastle:bcprov-jdk18on:[1.70,2.0)'
 
-    testCompile 'junit:junit:[4.0,)'
+    testImplementation 'junit:junit:[4.0,)'
 }
-
-apply from: '../opencadc.gradle'
 
