--- a/cadc-storage-adapter-test/build.gradle
+++ b/cadc-storage-adapter-test/build.gradle
@@ -1,6 +1,5 @@
 plugins {
-    id 'java'
-    id 'maven'
+    id 'java-library'
     id 'maven-publish'
     id 'checkstyle'
 }
@@ -9,6 +8,8 @@ repositories {
     mavenCentral()
     mavenLocal()
 }
+
+apply from: '../opencadc.gradle'
 
 sourceCompatibility = 11
 
@@ -20,13 +21,12 @@ description = 'OpenCADC Storage Inventory StorageAdapter test library'
 def git_url = 'https://github.com/opencadc/storage-inventory'
 
 dependencies {
-    compile 'org.opencadc:cadc-util:[1.6,2.0)'
-    compile 'org.opencadc:cadc-inventory:[0.7,)'
-    compile 'org.opencadc:cadc-storage-adapter:[0.11.2,)'
+    implementation 'org.opencadc:cadc-util:[1.6,2.0)'
+    implementation 'org.opencadc:cadc-inventory:[0.7,)'
+    implementation 'org.opencadc:cadc-storage-adapter:[0.11.2,)'
 
     // this is a test suite lib
-    compile 'junit:junit:[4.0,)'
+    implementation 'junit:junit:[4.0,)'
 }
 
-apply from: '../opencadc.gradle'
 
