--- a/cadc-storage-adapter-s3/build.gradle
+++ b/cadc-storage-adapter-s3/build.gradle
@@ -1,6 +1,5 @@
 plugins {
-    id 'java'
-    id 'maven'
+    id 'java-library'
     id 'maven-publish'
     id 'checkstyle'
 }
@@ -10,23 +9,23 @@ repositories {
     mavenLocal()
 }
 
-sourceCompatibility = 1.8
+apply from: '../opencadc.gradle'
+
+sourceCompatibility = 11
 
 group = 'org.opencadc'
 
 version = '0.5.0'
 
-apply from: '../opencadc.gradle'
-
 dependencies {
-    compile 'org.opencadc:cadc-util:[1.3.10,)'
-    compile 'org.opencadc:cadc-inventory:[0.7,)'
-    compile 'org.opencadc:cadc-storage-adapter:[0.8,)'
+    implementation 'org.opencadc:cadc-util:[1.3.10,)'
+    implementation 'org.opencadc:cadc-inventory:[1.0,)'
+    implementation 'org.opencadc:cadc-storage-adapter:[1.0,)'
 
     // Amazon S3 Java Library -- huge number of what look like server side dependencies
-    compile 'software.amazon.awssdk:s3:2.10.49'
+    implementation 'software.amazon.awssdk:s3:2.10.49'
 
-    testCompile 'junit:junit:[4.0,)'
+    testImplementation 'junit:junit:[4.0,)'
     
-    intTestCompile 'org.opencadc:cadc-storage-adapter-test:[0.1,)'
+    intTestImplementation 'org.opencadc:cadc-storage-adapter-test:[0.1,)'
 }
