--- a/cadc-storage-adapter-fs/build.gradle
+++ b/cadc-storage-adapter-fs/build.gradle
@@ -23,8 +23,8 @@ def git_url = 'https://github.com/opencadc/storage-inventory'
 dependencies {
     implementation 'org.opencadc:cadc-util:[1.6,2.0)'
     implementation 'org.opencadc:cadc-util-fs:[1.1.3,)'
-    api 'org.opencadc:cadc-inventory:[0.9.1,)'
-    api 'org.opencadc:cadc-storage-adapter:[0.11.2,)'
+    implementation 'org.opencadc:cadc-inventory:[0.9.1,)'
+    implementation 'org.opencadc:cadc-storage-adapter:[0.11.2,)'
 
     testImplementation 'junit:junit:[4.0,)'
     
