--- a/minoc/build.gradle
+++ b/minoc/build.gradle
@@ -52,3 +52,12 @@ dependencies {
     runtimeOnly 'org.opencadc:cadc-storage-adapter-swift:[0.8.7,)'
 }
 
+
+configurations {
+  // this are provided by tomcat
+  runtimeOnly.exclude group: 'javax.servlet'
+  runtimeOnly.exclude group: 'org.postgresql'
+
+  // pulled by stil,unused, critical CVEs:
+  runtimeOnly.exclude group: 'org.yaml', module: 'snakeyaml'
+}
