--- a/luskan/build.gradle
+++ b/luskan/build.gradle
@@ -60,3 +60,12 @@ configurations {
   runtimeOnly.exclude group: 'org.yaml', module: 'snakeyaml'
 }
 
+
+configurations {
+  // this are provided by tomcat
+  runtimeOnly.exclude group: 'javax.servlet'
+  runtimeOnly.exclude group: 'org.postgresql'
+
+  // pulled by stil,unused, critical CVEs:
+  runtimeOnly.exclude group: 'org.yaml', module: 'snakeyaml'
+}
