--- a/luskan/build.gradle
+++ b/luskan/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'org.opencadc:cadc-log:[1.1.6,2.0)'
     implementation 'org.opencadc:cadc-cdp:[1.4,2.0)'
     implementation 'org.opencadc:cadc-vosi:[1.4.3,2.0)'
+    implementation 'org.opencadc:cadc-gms:[1.0,2.0)'
     implementation 'org.opencadc:cadc-adql:[1.1,)'
     implementation 'org.opencadc:cadc-uws:[1.0.3,)'
     implementation 'org.opencadc:cadc-uws-server:[1.2.18,)'
