--- a/compat-api/data/build.gradle
+++ b/compat-api/data/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     testImplementation 'junit:junit:[4.0,)'
 
     intTestImplementation 'org.opencadc:cadc-test-vosi:[1.0.11,)'
+    intTestImplementation 'javax.servlet:javax.servlet-api:3.1.0'
 }
 
 configurations {
