--- a/ratik/build.gradle
+++ b/ratik/build.gradle
@@ -18,14 +18,14 @@ group = 'org.opencadc'
 mainClassName = 'org.opencadc.ratik.Main'
 
 dependencies {
-    compile 'org.opencadc:cadc-util:[1.10.2,2.0)'
-    compile 'org.opencadc:cadc-inventory:[1.0,2.0)'
-    compile 'org.opencadc:cadc-inventory-db:[1.0,2.0)'
-    compile 'org.opencadc:cadc-inventory-util:[0.1.8,1.0)'
-    compile 'org.opencadc:cadc-registry:[1.5,2.0)'
-    compile 'org.opencadc:cadc-tap:[1.1.15,2.0)'
+    implementation 'org.opencadc:cadc-util:[1.10.2,2.0)'
+    implementation 'org.opencadc:cadc-inventory:[1.0,2.0)'
+    implementation 'org.opencadc:cadc-inventory-db:[1.0,2.0)'
+    implementation 'org.opencadc:cadc-inventory-util:[0.1.8,1.0)'
+    implementation 'org.opencadc:cadc-registry:[1.5,2.0)'
+    implementation 'org.opencadc:cadc-tap:[1.1.15,2.0)'
 
-    testCompile 'junit:junit:[4.12,5.0)'
+    testImplementation 'junit:junit:[4.12,5.0)'
 }
 
 
