--- a/minoc/build.gradle
+++ b/minoc/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     runtimeOnly 'org.opencadc:cadc-access-control-identity:[1.2.1,2.0)'
     runtimeOnly 'org.opencadc:cadc-storage-adapter-fs:[0.9.3,)'
     runtimeOnly 'org.opencadc:cadc-storage-adapter-swift:[0.8.7,)'
+    runtimeOnly 'org.opencadc:cadc-storage-adapter-eos:[0.1.0,)'
 }
 
 
