bug: EosStorageAdpter handling of internal failure

--- a/vault/build.gradle
+++ b/vault/build.gradle
@@ -54,5 +54,5 @@ dependencies {
 }
 
 configurations {
-    runtime.exclude group: 'org.postgresql:postgresql'
+    runtimeOnly.exclude group: 'org.postgresql:postgresql'
 }
